--- a/Football_Scores/app/src/main/res/layout/scores_list_item.xml
+++ b/Football_Scores/app/src/main/res/layout/scores_list_item.xml
@@ -22,7 +22,8 @@
                 android:id="@+id/home_crest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:contentDescription="@string/away_team_crest_image" />
 
             <TextView
                 android:id="@+id/home_name"
@@ -71,7 +72,8 @@
                 android:id="@+id/away_crest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:contentDescription="@string/away_team_crest_image" />
 
             <TextView
                 android:id="@+id/away_name"
