--- a/Football_Scores/app/src/main/res/layout/detail_fragment.xml
+++ b/Football_Scores/app/src/main/res/layout/detail_fragment.xml
@@ -41,9 +41,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:drawableLeft="@android:drawable/ic_menu_share"
+            android:drawableStart="@android:drawable/ic_menu_share"
             android:gravity="center"
+            android:paddingEnd="120dp"
             android:paddingLeft="120dp"
             android:paddingRight="120dp"
+            android:paddingStart="120dp"
             android:text="@string/share_text" />
     </FrameLayout>
 
