--- a/Football_Scores/app/src/main/res/layout/fragment_main.xml
+++ b/Football_Scores/app/src/main/res/layout/fragment_main.xml
@@ -5,8 +5,10 @@
     android:layout_marginLeft="@dimen/list_horizonal_matgin"
     android:layout_marginRight="@dimen/list_horizonal_matgin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$PlaceholderFragment">
 
