--- a/Football_Scores/app/src/main/res/layout/scores_list_item.xml
+++ b/Football_Scores/app/src/main/res/layout/scores_list_item.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="5dp">
+        android:paddingTop="5dp"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="0dp"
