--- a/Football_Scores/app/src/main/res/values/colors.xml
+++ b/Football_Scores/app/src/main/res/values/colors.xml
@@ -76,5 +76,7 @@
     <color name="red13">#FFCACA</color>
     <color name="red14">#FFE4E4</color>
 
-
+    <color name="white">#ffffff</color>
+    <color name="light_grey">#eeeeee</color>
+    <color name="charcoal">#444</color>
 </resources>
