--- a/Football_Scores/app/src/main/res/layout/scores_widget_provider.xml
+++ b/Football_Scores/app/src/main/res/layout/scores_widget_provider.xml
@@ -24,19 +24,15 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/abc_action_bar_default_height_material"
         android:background="@color/green01"
+        android:gravity="center"
         android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/soccer" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:textColor="#fff"/>
+            android:textColor="#fff"
+            android:textSize="30sp" />
     </LinearLayout>
 
     <FrameLayout
