--- a/alexandria/app/src/main/res/layout/dialog_scan.xml
+++ b/alexandria/app/src/main/res/layout/dialog_scan.xml
@@ -14,14 +14,16 @@
         <ImageView
             android:layout_width="75dp"
             android:layout_height="75dp"
+            android:contentDescription="@string/barcode_icon"
             android:src="@drawable/barcode" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="75dp"
             android:layout_marginLeft="@dimen/default_spacing"
+            android:layout_marginStart="@dimen/default_spacing"
             android:gravity="start|center_vertical"
-            android:text="@string/scan_isbn"/>
+            android:text="@string/scan_isbn" />
     </LinearLayout>
 
 
@@ -36,8 +38,13 @@
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginBottom="@dimen/default_spacing"
-        android:gravity="center"
+        android:background="#e57373"
+        android:paddingEnd="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingStart="10dp"
         android:text="@android:string/cancel"
         android:textColor="@android:color/white"
         android:textStyle="bold" />
