--- a/Football_Scores/app/src/main/res/xml/widget_info_scores.xml
+++ b/Football_Scores/app/src/main/res/xml/widget_info_scores.xml
@@ -7,7 +7,8 @@
     android:minResizeHeight="@dimen/widget_min_resize_height"
     android:minResizeWidth="@dimen/widget_min_resize_width"
     android:minWidth="@dimen/widget_default_width"
+    android:previewImage="@drawable/widget_preview"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="0"
+    android:updatePeriodMillis="5000"
     android:widgetCategory="home_screen|keyguard"
     tools:ignore="UnusedAttribute" />
