--- a/Football_Scores/app/src/main/res/layout/detail_fragment.xml
+++ b/Football_Scores/app/src/main/res/layout/detail_fragment.xml
@@ -40,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:contentDescription="@string/share_button_desc"
             android:drawableLeft="@android:drawable/ic_menu_share"
             android:drawableStart="@android:drawable/ic_menu_share"
             android:gravity="center"
