Review comments fixes

--- a/alexandria/app/src/main/res/layout/fragment_full_book.xml
+++ b/alexandria/app/src/main/res/layout/fragment_full_book.xml
@@ -49,8 +49,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/fullBookCover"
+                    android:layout_marginEnd="10dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="10dp"
+                    android:layout_marginStart="20dp"
                     android:layout_toEndOf="@+id/fullBookCover"
                     android:layout_toRightOf="@+id/fullBookCover"
                     android:ellipsize="end"
@@ -65,6 +67,7 @@
                     android:layout_below="@+id/fullBookCover"
                     android:layout_margin="10dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:ellipsize="end" />
 
                 <LinearLayout
@@ -80,36 +83,23 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="left|top" />
+                        android:gravity="start|top" />
 
                     <TextView
                         android:id="@+id/authors"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="right|top"
+                        android:gravity="end|top"
                         android:textStyle="bold" />
                 </LinearLayout>
-
-                <ImageButton
-                    android:id="@+id/backButton"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/fullBookTitle"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignRight="@+id/fullBookTitle"
-                    android:layout_gravity="right|top"
-                    android:contentDescription="@string/back_button"
-                    android:onClick="goBack"
-                    android:src="@drawable/ic_action_undo" />
             </RelativeLayout>
         </ScrollView>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="bottom|end"
             android:orientation="horizontal">
 
             <Button
@@ -118,8 +108,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:drawableLeft="@drawable/ic_action_discard"
+                android:drawableStart="@drawable/ic_action_discard"
                 android:text="@string/delete" />
         </LinearLayout>
     </LinearLayout>
